# app_control

app/: CMakeLists.txt  README_NODEJS_MOBILE.txt  build.gradle.kts
app/libs/: nodejs-mobile-release.aar
app/src/androidTest/java/com/t91s/webview/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/nodejs-project/: index.js  package-lock.json  package.json
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/t91s/webview/: BluetoothPrinterHelper.kt  MainActivity.kt
app/src/main/java/com/t91s/webview/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/t91s/webview/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
